# ashley-agent-mastery

./: README.md
WorkshopDemo/: .env.example  README.md  agent.py  cli.py  dependencies.py  providers.py  pyproject.toml  settings.py
WorkshopDemo/.agent/rules/: workshop-demo.md
WorkshopDemo/.claude/: settings.local.json
WorkshopDemo/PRPs/: INITIAL-EXAMPLE.md  hybrid-rag-knowledge-graph-agent.md
WorkshopDemo/PRPs/examples/rag_pipeline/ingestion/: ingest.py
WorkshopDemo/PRPs/examples/rag_pipeline/sql/: schema.sql
WorkshopDemo/PRPs/examples/rag_pipeline/utils/: db_utils.py  models.py
WorkshopDemo/planning/: dependencies.md  prompts.md  tools.md
WorkshopDemo/tests/: VALIDATION_REPORT.md  conftest.py  test_agent.py  test_integration.py  test_tools.py  test_validation.py
WorkshopDemo/utils/: __init__.py  db_utils.py  graph_utils.py  models.py
full-ai-coding-workflow/.devcontainer/: init-firewall.sh
